--- a/frontend/src/app/postquestion/postquestion.component.html
+++ b/frontend/src/app/postquestion/postquestion.component.html
@@ -4,12 +4,12 @@
 ></app-nav>
 
 <mat-card style="margin-top: 20vh; width: 20vw; margin-left: 40vw">
-  <mat-card-title style="margin-left: 40%">Ask Us</mat-card-title>
+  <mat-card-title style="margin-left: 40%">Want to add something</mat-card-title>
   <mat-card-content>
     <div style="display: flex; justify-content: center; align-items: center">
       <form>
         <mat-form-field>
-          <mat-label>Ask Any Question</mat-label>
+          <mat-label>Add a text</mat-label>
           <textarea
             type="text"
             name="question"
