--- a/frontend/src/app/questions/questions.component.html
+++ b/frontend/src/app/questions/questions.component.html
@@ -1,7 +1,7 @@
 <app-nav [links]="['Questions', 'NewQuestions']" [isHome]="true"></app-nav>
 <div style="margin-top: 10vh; max-width: 50vw; margin-left: 25vw">
   <mat-card>
-    <mat-card-title>Questions</mat-card-title>
+    <mat-card-title>Texts</mat-card-title>
   </mat-card>
   <div style="margin-top: 5vh">
     <mat-card *ngIf="data.length > 0">
